--- a/lab06/tienda/templates/categoria.html
+++ b/lab06/tienda/templates/categoria.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
  <div class="row">
-        {% for prod in categoria_filtrada %}
+        {% for prod in producto %}
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
